fixed vertical align

--- a/backend/frontend/src/css/main.less
+++ b/backend/frontend/src/css/main.less
@@ -225,6 +225,7 @@ button.big {
         min-width: 200px;
         display: inline-block;
         margin: 0 10px;
+        vertical-align: top;
     }
 }
 
